# csjbot-alice-ros-control

./: .gitignore  Dockerfile  docker-compose.yml  launch_alice.sh  launch_robin.sh  readme.md  start_docker.sh
src/: .rosinstall
src/csjbot_alice/: CMakeLists.txt  package.xml
src/csjbot_alice/config/: contexts.yaml  openhab.yaml  openhab_jokes.yaml  parts_db.yaml  slam.yaml  speech_db.yaml
src/csjbot_alice/config/maps/: cfloor.stcm  general.stcm  rmi.stcm
src/csjbot_alice/launch/: alice.launch
src/csjbot_alice/msg/: Expression.msg  ExpressionTimed.msg  JointMovement.msg  JointPosition.msg  PartTransfer.msg  PartsListUpdate.msg  SpeechSettingVoice.msg
src/csjbot_alice/src/: openhab_connector.py  parts_management.py  pseudo_lily_server.py  publisher_video.py  subscriber_auditory.py  subscriber_expression.py  subscriber_map_loader.py  subscriber_movement.py  subscriber_parts_cv.py  subscriber_speech.py  subscriber_testimage.py
src/csjbot_alice/src/config/: robin.yaml
src/csjbot_alice/src/gui/: index.html  parts.html  slam.html  winter-reception.html
src/csjbot_alice/src/gui/css/: custom.css
src/csjbot_alice/src/gui/db/: parts.json
src/csjbot_alice/src/gui/js/: robin-core.js  robin-joystick.js  robin-parts.js
src/csjbot_alice/src/handlers/: auditory.py  expression.py  listener.py  movement.py  video.py  video_socket.py  web_socket.py
src/csjbot_alice/src/tests/: test_speech.py  test_videostream.py
src/lily_interface/: CMakeLists.txt  package.xml
src/lily_interface/launch/: alice.launch  robin.launch
src/lily_interface/msg/: SpeechSettings.msg
src/lily_interface/src/: alice_response_listener.py  subscriber_movement.py  subscriber_speech.py  subscriber_video.py  test_socket.py
src/lily_interface/src/config/: loader.py  robin.yaml
src/lily_interface/src/gui/: index.html  launch_web_server.sh
src/lily_interface/src/gui/css/: custom.css
src/lily_interface/src/gui/js/: robin-core.js
src/lily_interface/src/handlers/: __init__.py  base_handler.py  listener.py  movement.py  speech.py  video.py  web_socket.py
src/lily_interface/src/pseudo_lily/: lily_dev_server.py  lily_server.py  test_client.py
src/slamware_ros_sdk/: CMakeLists.txt  package.xml
src/yolo_parts/: CMakeLists.txt  package.xml  requirements.txt
src/yolo_parts/src/: subscriber_parts_cv.py  yolo_parts.py
src/yolo_parts/src/data/: lego.yaml
src/yolo_parts/src/data/hyps/: hyp.lego.yaml
src/yolo_parts/src/models/: common.py
src/yolo_parts/src/outputs/: lego_parts.txt
