<?xml version="1.0"?>
<package format="2">
  <name>csjbot_alice</name>
  <version>1.1.3</version>
  <description>The csjbot_alice package</description>
  <maintainer email="simon.castle-green@nottingham.ac.uk">Simon Castle-Green</maintainer>
  <author email="simon.castle-green@nottingham.ac.uk">Simon Castle-Green</author>

  <license>aGPLv3</license>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>robot_upstart</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
